pkg/gox/testdata/errors/malformed_nested_child_expression.gox
package main

func App() any {
	items := []string{"a"}
	return <main>{gf.Map(items, func(item string) any { return <Item>{item +}</Item> })}</main>
}
